--- a/index.htm
+++ b/index.htm
@@ -353,7 +353,7 @@
                 </div>
               </div>
               <span class="time">2022</span>
-              <h3 class="title">Previously worked at FPT Software</h3>
+              <h3 class="title">Previously worked at FPT Software + Rikkeisoft</h3>
               <p>
                 Training
               </p>
